追加機能（スーツ類）

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
   <body>
     <div class="input-area">
-      <input placeholder="名前" 　 />
-      <button>スーツ類</button>
+      <input id="add-text" placeholder="名前" 　 />
+      <button id="add-suit">スーツ類</button>
       <button>布団類</button>
       <button>その他</button>
     </div>
     <div class="suit-area">
       <p class="title">スーツ類</p>
-      <ul>
+      <ul id="incomplete-suit-list">
         <div class="list-row">
           <li>中島佑也</li>
           <button>クリーニング済み</button>
