追加機能（布団類、その他）

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <div class="input-area">
       <input id="add-text" placeholder="名前" 　 />
       <button id="add-suit">スーツ類</button>
-      <button>布団類</button>
-      <button>その他</button>
+      <button id="add-futon">布団類</button>
+      <button id="add-else">その他</button>
     </div>
     <div class="suit-area">
       <p class="title">スーツ類</p>
-      <ul id="incomplete-suit-list">
+      <ul id="just-cleaning-suit-list">
         <div class="list-row">
           <li>中島佑也</li>
           <button>クリーニング済み</button>
@@ -24,7 +24,7 @@
     </div>
     <div class="futon-area">
       <p class="title">布団類</p>
-      <ul>
+      <ul id="just-cleaning-futon-list">
         <div class="list-row">
           <li>Atsu</li>
           <button>クリーニング済み</button>
@@ -34,7 +34,7 @@
     </div>
     <div class="else-area">
       <p class="title">その他</p>
-      <ul>
+      <ul id="just-cleaning-else-list">
         <div class="list-row">
           <li>安藤太希</li>
           <button>クリーニング済み</button>
