クリーニング済み（スーツ類）

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="finish-area">
       <p class="title">受け取り待ち</p>
-      <ul>
+      <ul id="just-finish-area">
         <div class="list-row">
           <li>櫻本範勇</li>
           <button>受け取り完了</button>
